--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<meta id="cfLanguage" name="cf-language" content="en-US,en;q=0.9">
 			<meta id="cfCountryCode" name="cf-country-code" content="ph">
 			<meta id="cfAsOrganization" name="cf-as-organization" content="PLDT Fibre">
-  <title>This  fat burner capsules Saved Me From Deprivation, Dieting, &amp; Endless Workouts (I Actually Lost Weight Faster!) </title>
+  <title>Diese Fatburner-Kapseln haben mich vor Entbehrungen, Diäten, &amp; Endloses Training (ich habe tatsächlich schneller abgenommen!) </title>
  
         
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
