--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@ line-height: normal;}
         <h2 class="heading-jb">Was ist das?</h2>
 <a href="{offer_link}"><img src="./index_files/hand-shapemed2.png" alt="" class="container-img _2"></a>
 	<p>Es heißt Shapemed und ist eine -Fettverbrenner-Kapsel, die deinem Körper alle Unterstützung bietet, die er benötigt, um überschüssiges Gewicht loszulassen.</p>
-	<p>Sie steckt voller zwölf erprobter Inhaltsstoffe, die <strong>Fett verbrennen, das Immunsystem stärken, die Energie steigern und Blähungen reduzieren.</strong> Sie enthält:</p>
+	<p>Es gibt keine Magie – nur die Kraft natürlicher Inhaltsstoffe, die sorgfältig aufgrund ihrer außergewöhnlichen Eigenschaften ausgewählt wurden. Shapemed Fatburner-Kapseln enthalten wirksame Inhaltsstoffe wie grünen Tee, Guarana und Himbeerextrakt und bieten eine zugängliche und wirksame Lösung zur Unterstützung des Gewichtsverlusts und des Energieniveaus.</p>
 
 
 <ul class="yellow-box ul">
